<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white" >

	<com.lyjtzn.yhsfc.view.MyCommonTitle
        android:id="@+id/aci_mytitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
	
	<!-- 注册 -->
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="0.0dip"
	    android:layout_weight="1"
	    android:focusable="true"
	    android:orientation="vertical"
	    android:layout_marginTop="@dimen/twenty"
        android:focusableInTouchMode="true" >
	    <LinearLayout 
	        android:layout_width="fill_parent"
			android:layout_height="@dimen/forty"
	        android:orientation="horizontal"
	        android:gravity="center_vertical"
	        android:background="@drawable/bg_round_grey"
	        android:layout_marginLeft="@dimen/fifteen"
	        android:layout_marginRight="@dimen/fifteen"
	        android:layout_marginTop="@dimen/ten">
	        <TextView 
	            android:text="@string/text_mobile"
	            android:textSize="@dimen/t_eighteen"
	            android:textColor="#4E4E4E"
	            android:layout_marginLeft="@dimen/ten"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>
	      	<EditText 
	      	    android:id="@+id/uu_username"
	      	    android:layout_width="0.0dip"
	      	    android:layout_height="wrap_content"
	      	    android:layout_weight="1"
				android:hint="@string/login_username"
				android:layout_marginLeft="@dimen/ten"
                style="@style/edit_text"
	      	    android:inputType="textPersonName"/>
		    <Button 
		        android:id="@+id/btn_identify"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
	      	    android:layout_gravity="center_vertical"
	        	android:background="@drawable/bg_round_green"
	        	android:padding="@dimen/five"
	        	android:layout_margin="@dimen/three"
	        	android:textColor="@color/white"
		        android:textSize="@dimen/fourteen"
		        android:text="@string/btn_identify"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
			android:layout_height="@dimen/forty"
	        android:orientation="horizontal"
	        android:gravity="center_vertical"
	        android:background="@drawable/bg_round_grey"
	        android:layout_marginLeft="@dimen/fifteen"
	        android:layout_marginRight="@dimen/fifteen"
	        android:layout_marginTop="@dimen/ten">
	        <TextView 
	            android:text="@string/text_identify"
	            android:textSize="@dimen/t_eighteen"
	            android:textColor="#4E4E4E"
	            android:layout_marginLeft="@dimen/ten"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>
	      	<EditText 
	      	    android:id="@+id/uu_identify"
	      	    android:layout_width="fill_parent"
	      	    android:layout_height="wrap_content"
				android:hint="@string/hint_identify"
				android:layout_marginLeft="@dimen/ten"
                style="@style/edit_text"
	      	    android:inputType="textPassword"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
			android:layout_height="@dimen/forty"
	        android:orientation="horizontal"
	        android:gravity="center_vertical"
	        android:background="@drawable/bg_round_grey"
	        android:layout_marginLeft="@dimen/fifteen"
	        android:layout_marginRight="@dimen/fifteen"
	        android:layout_marginTop="@dimen/ten">
	        <TextView 
	            android:text="@string/text_password"
	            android:textSize="@dimen/t_eighteen"
	            android:textColor="#4E4E4E"
	            android:layout_marginLeft="@dimen/ten"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>
	      	<EditText 
	      	    android:id="@+id/uu_password"
	      	    android:layout_width="fill_parent"
	      	    android:layout_height="wrap_content"
				android:hint="@string/hint_password"
				android:layout_marginLeft="@dimen/ten"
                style="@style/edit_text"
	      	    android:inputType="textPassword"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
			android:layout_height="@dimen/forty"
	        android:orientation="horizontal"
	        android:gravity="center_vertical"
	        android:background="@drawable/bg_round_grey"
	        android:layout_marginLeft="@dimen/fifteen"
	        android:layout_marginRight="@dimen/fifteen"
	        android:layout_marginTop="@dimen/ten">
	        <TextView 
	            android:text="@string/text_repassword"
	            android:textSize="@dimen/t_eighteen"
	            android:textColor="#4E4E4E"
	            android:layout_marginLeft="@dimen/ten"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>
	      	<EditText 
	      	    android:id="@+id/uu_repassword"
	      	    android:layout_width="fill_parent"
	      	    android:layout_height="wrap_content"
				android:hint="@string/hint_repassword"
				android:layout_marginLeft="@dimen/ten"
                style="@style/edit_text"
	      	    android:inputType="textPassword"/>
	    </LinearLayout>
	</LinearLayout>
    <Button 
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/twenty"
        android:layout_height="@dimen/forty_five"
        android:background="@drawable/bg_round_green"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/text_register"
		android:textSize="@dimen/sixteen"/>
</LinearLayout>